2nd complete draft with updated colors

--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
+<body data-sveltekit-preload-data="hover" class="bg-stone-950 text-white relative">
 	<div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
 
 	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
