--- a/src/app.html
+++ b/src/app.html
@@ -10,27 +10,77 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
 		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<script src="src/lib/bvambient.js"></script>
+
 	<link
 		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
+	<link rel="stylesheet" href="src/bvambient.css">
+	
+
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-stone-950 text-white relative">
+<body data-sveltekit-preload-data="hover" class="bg-black text-white relative">
 	<div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
 
 	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
-		<!--<div id="particles-js" class="absolute inset-0" /> -->
+		<!-- <div id="particles-js" class="absolute inset-0" /> -->
+		<div id="ambient"></div>
 	</div>
 	<script>
 		particlesJS.load("particles-js", "assets/particles.json", function () {
 			console.log("callback - particles.js config loaded");
 		});
 	</script>
+	
+	<script>
+		document.addEventListener("DOMContentLoaded", function() {
+			var demo1 = new BVAmbient({
+				selector: "#ambient",
+			  	fps: 60,
+			  	max_transition_speed: 12000,
+			 	 min_transition_speed: 8000,
+			  	particle_number: 30,
+			  	particle_maxwidth: 20,
+			  	particle_minwidth: 10,
+			  	particle_radius: 50,
+			  	particle_opacity: true,
+			  	particle_colision_change: true,
+			  	particle_background: "random",
+				refresh_onfocus: true,
+				particle_image: {
+          			image: false,
+          			src: ""
+        		},
+        		responsive: [
+            		{
+              			breakpoint: 768,
+             			 settings: {
+               				 particle_number: "15"
+              			}
+            		},
+            		{
+              			breakpoint: 480,
+              			settings: {
+               				particle_number: "10"
+              			}
+            		}
+        		]
+			});
+ 		 });
+
+
+	</script>
+
+	
+	
 </body>
 
 </html>
