--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      -->
-	<script src="ndibuilt-portfolio/src/lib/particles.js"></script>
+	<script src="https://ndibuilt-portfolio.netlify.app/src/lib/particles.js"></script>
 	
 	<script src="src/lib/bvambient.js"></script>
 
@@ -37,7 +37,7 @@
 		<!-- <div id="ambient"></div> -->
 	</div>
 	<script>
-		particlesJS.load("particles-js", "ndibuilt-portfolio/assets/particlesjs-config.json", function () {
+		particlesJS.load("particles-js", "https://ndibuilt-portfolio.netlify.app/assets/particlesjs-config.json", function () {
 			console.log("callback - particles.js config loaded");
 		});
 	</script>
