--- a/src/app.html
+++ b/src/app.html
@@ -11,9 +11,9 @@
 		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      -->
-	<script src="https://ndibuilt-portfolio.netlify.app/src/lib/particles.js"></script>
+	<script src="./src/lib/particles.js"></script>
 	
-	<script src="src/lib/bvambient.js"></script>
+	<!-- <script src="src/lib/bvambient.js"></script> -->
 
 	<link
 		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
@@ -22,7 +22,7 @@
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
-	<link rel="stylesheet" href="src/bvambient.css">
+	<!-- <link rel="stylesheet" href="src/bvambient.css"> -->
 	
 
 	<meta name="viewport" content="width=device-width" />
@@ -37,11 +37,12 @@
 		<!-- <div id="ambient"></div> -->
 	</div>
 	<script>
-		particlesJS.load("particles-js", "https://ndibuilt-portfolio.netlify.app/assets/particlesjs-config.json", function () {
+		particlesJS.load("particles-js", "./assets/particlesjs-config.json", function () {
 			console.log("callback - particles.js config loaded");
 		});
 	</script>
 	
+	<!--
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var demo1 = new BVAmbient({
@@ -80,7 +81,7 @@
 
 
 	</script>
-
+-->
 	
 	
 </body>
