--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      -->
-	<script src="./src/lib/particles.js"></script>
+	<script src="./src/lib/particles.js" type="module"></script>
 	
 	<!-- <script src="src/lib/bvambient.js"></script> -->
 
